added configuration options for all signals (can be configured via config file or at compile time)

--- a/exampleProgram/Makefile.am
+++ b/exampleProgram/Makefile.am
@@ -28,6 +28,9 @@ noinst_PROGRAMS = epctest
 # Sources for epc
 epctest_SOURCES = test.cpp
 
+# Add epctest dependencies
+epctest_DEPENDENCIES = ../src/libepc.a ../include/epc/*
+
 # Linker options libTestProgram
 #libepc_a_LDFLAGS = 
 
