Adds pfcptest/analysis
- Adds a new test which converts pcaps to json representation for python processing
- Adds 64-bit support to EJsonBuilder
- Fixes the translator in pcpp utility
- Fixes a bug with the pfcp wrapper classes calculating the wrong counts
- Adds helper methods to retrieve ie counts

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ pfcp/pfcpr15/*.a
 pfcp/pfcpr15/st*
 pfcp/src/.deps
 pfcp/pfcptest/.deps
+pfcp/pfcptest/analysis/.deps
+pfcp/pfcptest/analysis/.dirstamp
 pfcp/pfcptest/pcaps/.deps
 pfcp/pfcptest/pcaps/.dirstamp
 pfcp/pfcptest/pfcptest
